--- a/index.html
+++ b/index.html
@@ -12,32 +12,38 @@
     <title>Document</title>
   </head>
   <body>
-    <section class="top">
+    <section class="top center">
       <section class="angle">
         <header class="header">
           <section class="left-header">
             <img src="/img/logo.png" alt="" />
-            <ul class="menu-header">
-              <li><p>Products</p></li>
-              <li><p>Pricing</p></li>
-              <li>
-                <p>FAQ</p>
-              </li>
-              <li>
-                <p>Blog</p>
-              </li>
-              <li>
-                <p>Blog</p>
-              </li>
-            </ul>
+            <section class="center-header">
+              <ul class="menu-header">
+                <li><p>Products</p></li>
+                <li><p>Pricing</p></li>
+                <li>
+                  <p>FAQ</p>
+                </li>
+                <li>
+                  <p>Blog</p>
+                </li>
+                <li>
+                  <p>Blog</p>
+                </li>
+              </ul>
+            </section>
           </section>
           <section class="right-header">
             <p>Sign in</p>
             <button class="sign-up">Sign up</button>
+            <img class="menu-icon" src="/img/menu-icon.png" alt="" />
           </section>
+          <!-- <img src="/img/menu-icon.png" alt="" /> -->
         </header>
+        <div class="create-line"></div>
         <section class="big-header">
           <section class="big-header-left">
+            <img class="sub" src="/img/main-screen (1).png" alt="" />
             <h1 class="monitor">
               Monitor your business on real-time dashboard
             </h1>
@@ -71,27 +77,33 @@
         <ul class="features">
           <li class="rec">
             <img src="/img/Icon.png" height="60" alt="icon" />
-            <h3 class="mon">Monitoring 24/7</h3>
-            <p class="dolor">
-              Lorem ipsum dolor sit amet, consectetur adipis cing elit.
-              Elementum nisi aliquet volutpat.
-            </p>
+            <div class="text">
+              <h3 class="mon">Monitoring 24/7</h3>
+              <p class="dolor">
+                Lorem ipsum dolor sit amet, consectetur adipis cing elit.
+                Elementum nisi aliquet volutpat.
+              </p>
+            </div>
           </li>
           <li class="rec">
             <img src="/img/Icon (1).png" height="60" alt="icon" />
-            <h3 class="mon">Widget System</h3>
-            <p class="dolor">
-              Sapien in etiam vitae nibh nunc mattis imperdiet sed nullam. Vitae
-              et, tortor pulvinar risus pulvinar.
-            </p>
+            <div class="text">
+              <h3 class="mon">Widget System</h3>
+              <p class="dolor">
+                Sapien in etiam vitae nibh nunc mattis imperdiet sed nullam.
+                Vitae et, tortor pulvinar risus pulvinar.
+              </p>
+            </div>
           </li>
           <li class="rec">
             <img src="/img/Icon (2).png" height="60" alt="icon" />
-            <h3 class="mon">Best Performance</h3>
-            <p class="dolor">
-              Lorem ipsum dolor sit amet, consectetur adipis cing elit.
-              Elementum nisi aliquet volutpat.
-            </p>
+            <div class="text">
+              <h3 class="mon">Best Performance</h3>
+              <p class="dolor">
+                Lorem ipsum dolor sit amet, consectetur adipis cing elit.
+                Elementum nisi aliquet volutpat.
+              </p>
+            </div>
           </li>
         </ul>
       </section>
@@ -111,7 +123,7 @@
             <!-- <img src="/img/screen-01.png" height="410" alt="scr" /> -->
           </li>
 
-          <li class="one">
+          <li class="one second">
             <div class="pic2"></div>
             <div class="txt">
               <h2 class="h">Fully customizable to address your needs</h2>
@@ -158,24 +170,24 @@
                       <h3>Starter</h3>
                     </div>
                     <div class="up-to"><p>up to 3 users</p></div>
-                    <div class="create-line"></div>
+                    <div class="create-line price"></div>
                     <div class="how-much">
                       <p class="dollar">$<span>29</span></p>
                     </div>
                     <div class="per"><p>per month</p></div>
                     <button class="btn">Order</button>
                   </li>
-                  <li class="card">
-                    <div class="name">
+                  <li class="card middle">
+                    <div class="name standard">
                       <h3>Standard</h3>
                     </div>
                     <div class="up-to"><p>up to 20 users</p></div>
-                    <div class="create-line"></div>
-                    <div class="how-much">
-                      <p class="dollar">$<span>99</span></p>
+                    <div class="create-line price"></div>
+                    <div class="how-much how">
+                      <p class="dollar dol">$<span class="dol">99</span></p>
                     </div>
                     <div class="per"><p>per month</p></div>
-                    <button class="btn">Order</button>
+                    <button class="btn bot">Order</button>
                   </li>
                   <li class="card">
                     <div class="name">
@@ -183,7 +195,7 @@
                     </div>
                     <div class="up-to"><p>up to 200 users</p></div>
                     <div class="create-line"></div>
-                    <div class="how-much">
+                    <div class="how-much now">
                       <p class="dollar">$<span>299</span></p>
                     </div>
                     <div class="per"><p>per month</p></div>
@@ -192,6 +204,55 @@
                 </ul>
               </section>
             </section>
+          </section>
+        </section>
+      </section>
+      <section class="login">
+        <section class="central">
+          <section class="left-login">
+            <h3 class="see-why">
+              See why the world’s best companies use Analytics
+            </h3>
+            <div class="trusted">
+              <div class="trus"></div>
+              <p class="trust">Trusted by</p>
+              <div class="trus"></div>
+            </div>
+            <div class="logs">
+              <div class="line1">
+                <img class="l1" src="/img/l1.png" alt="l1" />
+                <img class="l2" src="/img/l2.png" alt="l2" />
+              </div>
+              <div class="line2">
+                <img src="/img/l3.png" alt="l3" class="l3" />
+                <img src="/img/l4.png" alt="l4" class="l4" />
+              </div>
+            </div>
+          </section>
+          <section class="right-login">
+            <section class="forms">
+              <h3 class="sign_up">Sign up</h3>
+              <button class="start">Start your free trial</button>
+            </section>
+          </section>
+        </section>
+      </section>
+      <section class="footer">
+        <section class="pictures">
+          <section class="lside">
+            <img class="subtract" src="/img/Subtract1.png" alt="subtract" />
+            <img src="/img/ANALYTICS.png" alt="analytics" class="analytics" />
+          </section>
+          <section class="center1">
+            <p class="products">Products</p>
+            <p class="products">Pricing Plans</p>
+            <p class="products">FAQ</p>
+            <p class="products">Blog</p>
+          </section>
+          <section class="rside">
+            <img src="/img/Facebook.png" alt="facebook" class="facebook" />
+            <img src="/img/Twitter.png" alt="twitter" class="twitter" />
+            <img src="/img/Instagram.png" alt="inst" class="inst" />
           </section>
         </section>
       </section>
