--- a/index.html
+++ b/index.html
@@ -16,27 +16,33 @@
       <section class="angle">
         <header class="header">
           <section class="left-header">
-            <img src="/img/logo.png" alt="" />
+            <img class="logo" src="/img/logo.png" alt="" />
             <section class="center-header">
               <ul class="menu-header">
-                <li><p>Products</p></li>
-                <li><p>Pricing</p></li>
                 <li>
-                  <p>FAQ</p>
+                  <p><a href="#">Products</a></p>
                 </li>
                 <li>
-                  <p>Blog</p>
+                  <p><a href="#">Pricing</a></p>
                 </li>
                 <li>
-                  <p>Blog</p>
+                  <p><a href="#">FAQ</a></p>
+                </li>
+                <li>
+                  <p><a href="#">Blog</a></p>
+                </li>
+                <li>
+                  <p><a href="#">Blog</a></p>
                 </li>
               </ul>
             </section>
           </section>
           <section class="right-header">
-            <p>Sign in</p>
-            <button class="sign-up">Sign up</button>
-            <img class="menu-icon" src="/img/menu-icon.png" alt="" />
+            <p><a href="#">Sign in</a></p>
+            <button class="sign-up"><a href="#">Sign up</a></button>
+            <a href="#"
+              ><img class="menu-icon" src="/img/menu-icon.png" alt=""
+            /></a>
           </section>
           <!-- <img src="/img/menu-icon.png" alt="" /> -->
         </header>
@@ -229,30 +235,40 @@
               </div>
             </div>
           </section>
-          <section class="right-login">
-            <section class="forms">
-              <h3 class="sign_up">Sign up</h3>
-              <button class="start">Start your free trial</button>
-            </section>
+          <!-- <section class="right-login"> -->
+          <section class="forms">
+            <h3 class="sign_up">Sign up</h3>
+            <a href="#"><button class="start">Start your free trial</button></a>
+            <!-- </section> -->
           </section>
         </section>
       </section>
       <section class="footer">
         <section class="pictures">
           <section class="lside">
-            <img class="subtract" src="/img/Subtract1.png" alt="subtract" />
-            <img src="/img/ANALYTICS.png" alt="analytics" class="analytics" />
+            <a href="#"
+              ><img class="subtract" src="/img/Subtract1.png" alt="subtract"
+            /></a>
+            <a href="#"
+              ><img src="/img/ANALYTICS.png" alt="analytics" class="analytics"
+            /></a>
           </section>
           <section class="center1">
-            <p class="products">Products</p>
-            <p class="products">Pricing Plans</p>
-            <p class="products">FAQ</p>
-            <p class="products">Blog</p>
+            <p class="products"><a href="#">Products</a></p>
+            <p class="products"><a href="#">Pricing Plans</a></p>
+            <p class="products"><a href="#">FAQ</a></p>
+            <p class="products"><a href="#">Blog</a></p>
           </section>
           <section class="rside">
-            <img src="/img/Facebook.png" alt="facebook" class="facebook" />
-            <img src="/img/Twitter.png" alt="twitter" class="twitter" />
-            <img src="/img/Instagram.png" alt="inst" class="inst" />
+            <a href="#"
+              ><img src="/img/Facebook.png" alt="facebook" class="facebook"
+            /></a>
+            <a href="#"
+              ><img src="/img/Twitter.png" alt="twitter" class="twitter"
+            /></a>
+            <a href="#"
+              ><img src="/img/Instagram.png" alt="inst" class="inst"
+            /></a>
           </section>
         </section>
       </section>
