--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="css/normalize.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <title>Document</title>
   </head>
   <body>
@@ -20,7 +21,7 @@
       <section class="angle">
         <header class="header">
           <section class="left-header">
-            <img class="logo" src="/img/logo.png" alt="" />
+            <img class="logo" src="img/logo.png" alt="" />
             <section class="center-header">
               <ul class="menu-header">
                 <li>
@@ -45,7 +46,7 @@
             <p><a href="#">Sign in</a></p>
             <button class="sign-up"><a href="#">Sign up</a></button>
             <a href="#"
-              ><img class="menu-icon" src="/img/menu-icon.png" alt=""
+              ><img class="menu-icon" src="img/menu-icon.png" alt=""
             /></a>
           </section>
           <!-- <img src="/img/menu-icon.png" alt="" /> -->
@@ -53,7 +54,7 @@
         <div class="create-line"></div>
         <section class="big-header">
           <section class="big-header-left">
-            <img class="sub" src="/img/main-screen (1).png" alt="" />
+            <img class="sub" src="img/main-screen (1).png" alt="" />
             <h1 class="monitor">
               Monitor your business on real-time dashboard
             </h1>
@@ -106,7 +107,7 @@
             </div>
           </li>
           <li class="rec">
-            <img src="/img/Icon (2).png" height="60" alt="icon" />
+            <img src="img/Icon (2).png" height="60" alt="icon" />
             <div class="text">
               <h3 class="mon">Best Performance</h3>
               <p class="dolor">
@@ -230,12 +231,12 @@
             </div>
             <div class="logs">
               <div class="line1">
-                <img class="l1" src="/img/l1.png" alt="l1" />
-                <img class="l2" src="/img/l2.png" alt="l2" />
+                <img class="l1" src="img/l1.png" alt="l1" />
+                <img class="l2" src="img/l2.png" alt="l2" />
               </div>
               <div class="line2">
-                <img src="/img/l3.png" alt="l3" class="l3" />
-                <img src="/img/l4.png" alt="l4" class="l4" />
+                <img src="img/l3.png" alt="l3" class="l3" />
+                <img src="img/l4.png" alt="l4" class="l4" />
               </div>
             </div>
           </section>
@@ -359,10 +360,10 @@
         <section class="pictures">
           <section class="lside">
             <a href="#"
-              ><img class="subtract" src="/img/Subtract1.png" alt="subtract"
+              ><img class="subtract" src="img/Subtract1.png" alt="subtract"
             /></a>
             <a href="#"
-              ><img src="/img/ANALYTICS.png" alt="analytics" class="analytics"
+              ><img src="img/ANALYTICS.png" alt="analytics" class="analytics"
             /></a>
           </section>
           <section class="center1">
@@ -373,13 +374,13 @@
           </section>
           <section class="rside">
             <a href="#"
-              ><img src="/img/Facebook.png" alt="facebook" class="facebook"
+              ><img src="img/Facebook.png" alt="facebook" class="facebook"
             /></a>
             <a href="#"
-              ><img src="/img/Twitter.png" alt="twitter" class="twitter"
+              ><img src="img/Twitter.png" alt="twitter" class="twitter"
             /></a>
             <a href="#"
-              ><img src="/img/Instagram.png" alt="inst" class="inst"
+              ><img src="img/Instagram.png" alt="inst" class="inst"
             /></a>
           </section>
         </section>
